# katharevousa-nlp-tooling

./: .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: annotation_schema.yaml
docs/: MAINTAINER.md  paper_v1_draft.md
paper/: README.md  main.tex  references.bib
reports/: external_baselines_report.json  final_gold_eval_report.json  final_gold_eval_report_v2.json  final_gold_eval_report_v3.json  final_gold_eval_report_v4_hardcase.json  final_gold_eval_report_v4b_longarc.json  final_gold_parser_error_report_v3.json  final_gold_parser_error_report_v4_hardcase.json  final_gold_parser_error_report_v4b_longarc.json  final_gold_split_manifest_v2.json  pilot_eval_report.json  pilot_live5_eval_report.json  stanza_baseline_report.json  stanza_custom_v1_report.json  transformer_parser_grid_g1_report.json  transformer_parser_grid_g2_report.json  transformer_parser_grid_g3_report.json  transformer_parser_grid_g4_report.json  transformer_parser_mbert_v1_report.json  transformer_parser_mbert_v2_report.json  transformer_parser_smoke_report.json  transformer_parser_v1_opt_report.json  transformer_parser_v2_opt_report.json  transformer_parser_v2b_opt_report.json
scripts/: adjudicate_disagreements.py  build_dataset_release.py  build_gpt_gold_dataset.py  build_model_release.py  build_pilot_dataset.py  copilot_session.py  evaluate_external_baselines.py  evaluate_stanza_baseline.py  export_sources.py  freeze_final_gold_snapshot.py  reconstruct_answer_files.py  render_benchmark_figure.py  resume_gpt_gold_batches.py  retry_failed_gold_dataset.py  review_disagreements.py  (+5 more)
(+39 files in other folders)
