[build-system]

requires = ["setuptools>=68", "wheel"]

build-backend = "setuptools.build_meta"



[project]

name = "katharevousa-nlp-tooling"

version = "0.1.0"

description = "Semi-manual UD-based Katharevousa NLP training toolkit."

requires-python = ">=3.10"

dependencies = [

  "pandas>=2.2.0",

  "openpyxl>=3.1.0",

  "python-docx>=1.1.0",

  "pydantic>=2.7.0",

  "pyyaml>=6.0.0",

  "scikit-learn>=1.5.0",

  "numpy>=1.26.0",

  "torch>=2.4.0",

  "transformers>=4.48.0",

  "huggingface_hub>=0.30.0",

  "safetensors>=0.4.0",

]



[tool.setuptools]

package-dir = {"" = "src"}



[tool.setuptools.packages.find]

where = ["src"]

